# temper

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
Source/: MainComponent.h  PluginProcessor.cpp  RestrictionProcessor.cpp  TemperDsp.cpp
